--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -78,7 +78,7 @@ transform: translateY(0px);
 
 /*-----ABOUT ME-----*/
 .about-me{	
-padding: 6% 3%;
+padding: 3% 3%;
 border-left: 2px solid #89cff0;
 border-right: 2px solid #89cff0;
 
@@ -106,7 +106,18 @@ animation: treehouse .8s ease-in-out .2s forwards;
 margin-top: 2%;	
 }
 
+.click{
+position: relative;
+left: 10%;
+transform: rotate(15deg);	
+}
 
+.click-2{
+position: relative;
+right: 10%;
+bottom: 4%;
+transform: rotate(-15deg);	
+}
 
 /*--PORTFOLIO---*/
 
