--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -150,6 +150,7 @@ padding-top: 10px;
 }
 
 .footer{
-background-color: rgba(46, 49, 49, .5);	
+background-color: rgba(46, 49, 49, .2);	
+margin: 0 auto;
 }
 
