--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,10 +1,13 @@
+body{
+font-family: 'Cairo', sans-serif;	
+}
+
 /*---NAV---*/
 nav{
 background-color: #b20000;	
 }
 
 a{
-font-family: 'Roboto', sans-serif;
 color: white;	
 }
 
@@ -12,7 +15,6 @@ color: white;
 .jumbotron{
 padding-top: 13%;
 padding-left: 2%;
-font-family: 'Roboto', sans-serif;
 height: 100vh;
 background-image: url('../cover.jpg');
 background-position: center;
@@ -76,6 +78,7 @@ transform: translateY(0px);
 }	
  }
 
+
 /*-----ABOUT ME-----*/
 .about-me{	
 padding: 3% 3%;
@@ -99,7 +102,7 @@ width: 90px;
 }
 
 .about-me svg:hover{
-animation: treehouse .8s ease-in-out .2s forwards;	
+animation: treehouse 1s ease-in-out .2s forwards;	
 }
 
 .mail-svg{
@@ -122,7 +125,17 @@ transform: rotate(-15deg);
 /*--PORTFOLIO---*/
 
 .btn{
-background-color: black;	
+background-color: #52bab3;	
+border: solid 1px black;
+border-radius: 10px;
+opacity: 0.5;
+}
+
+.btn:hover{
+opacity: 1;	
+background-color: #52bab3; 
+transition-property: opacity;
+transition-duration: 0.4s;
 }
 
 .card{
@@ -132,7 +145,10 @@ border-radius: 10px;
 }
 
 .card:hover{
-transform: scale(1.05);
+transform: scale(1.1);
+transition: all .4s ease-in-out;
+transition-duration: .5s;
+margin: 5% 2%;
 }
 
 h2{
