--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,6 +2,7 @@ body{
 font-family: 'Cairo', sans-serif;	
 }
 
+
 /*---NAV---*/
 nav{
 background-color: #b20000;	
@@ -67,11 +68,13 @@ opacity: 1;
 }30%{
 transform: translateY(5px);	
 } 60%{
-transform: translateY(-6px);	
+transform: translateY(-6px);
+transform: rotate(-10deg);	
 } 80%{
 transform: translateY(9px);	
+transform: rotate(15deg)  
 } 95%{
-transform: translateY(-3px);	
+transform: translateY(-3px);
 } 100%{
 transform: translateY(0px);
 }	
@@ -83,7 +86,12 @@ transform: translateY(0px);
 padding: 3% 3%;
 border-left: 2px solid #89cff0;
 border-right: 2px solid #89cff0;
+background-image: linear-gradient(white, #aecdd2, white);
+}
 
+.about-me p{
+ font-size: 1.2rem; 
+ font-weight: 10;
 }
 
 .about-me h4{
@@ -105,8 +113,9 @@ animation: treehouse 1s ease-in-out .2s forwards;
 }
 
 .mail-svg{
-margin-top: 2%;	
+margin-top: 9%;	
 }
+
 
 .click{
 position: relative;
@@ -130,9 +139,28 @@ background-size: cover;
 border-bottom: 4px solid #b20000;
 }
 
-.buttons{
-margin-top: 15px;	
+.introspan{
+  color:#b20000;
+  border-bottom: 2px solid #89cff0;
 }
+
+.helloworld{
+font-size: 2.5rem;
+color: white;
+text-shadow: 0 1px 1px #bbb,
+    0 2px 0 #999, 
+    0 3px 0 #888, 
+    0 4px 0 #777, 
+    0 5px 0 #666, 
+    0 6px 0 #555, 
+    0 7px 0 #444,  
+    0 9px 7px #302314;
+}
+
+.buttons{
+margin-top: 15px;
+}
+
 .btn{
 background-color: #52bab3;	
 border: none;
@@ -159,6 +187,7 @@ transform: scale(1.1);
 transition: all .4s ease-in-out;
 transition-duration: .5s;
 margin: 5% 2%;
+box-shadow: -3px -3px 10px black;
 }
 
 h2{
@@ -175,6 +204,7 @@ padding-top: 10px;
 }
 
 .footer{
-background-color: rgba(46, 49, 49, .2);	
+background-color: #c2e4d3;
+padding: 10px;
 }
 
