--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -146,15 +146,8 @@ border-bottom: 4px solid #b20000;
 
 .helloworld{
 font-size: 2.5rem;
-color: white;
-text-shadow: 0 1px 1px #bbb,
-    0 2px 0 #999, 
-    0 3px 0 #888, 
-    0 4px 0 #777, 
-    0 5px 0 #666, 
-    0 6px 0 #555, 
-    0 7px 0 #444,  
-    0 9px 7px #302314;
+color: black;
+text-shadow: 5px 5px 15px #89cff0;
 }
 
 .buttons{
