--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -86,7 +86,7 @@ transform: translateY(0px);
 padding: 3% 3%;
 border-left: 2px solid #89cff0;
 border-right: 2px solid #89cff0;
-background-image: linear-gradient(white, #aecdd2, white);
+background-image: linear-gradient(white, #dbd9d9, white);
 }
 
 .about-me p{
