--- a/CSS/Components/_portfolio.scss
+++ b/CSS/Components/_portfolio.scss
@@ -36,6 +36,10 @@ transition-property: opacity;
 transition-duration: 0.4s;
 }
 
+.btn:active{
+background-color: #89cff0;	
+};
+
 .card{
 background-color: rgba(103, 128, 159, .2);
 box-shadow: 2px 2px 10px black;
