--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -346,6 +346,12 @@ nav {
 a {
   color: white; }
 
+a:hover {
+  color: #89cff0; }
+
+a:active {
+  color: #fcba03; }
+
 .about-me {
   padding: 3% 3%;
   border-left: 2px solid #89cff0;
@@ -470,5 +476,14 @@ h2 {
     transform: translateY(-3px); }
   100% {
     transform: translateY(0px); } }
+@media (min-width: 320px) {
+  .nav-name {
+    display: none; } }
+@media (min-width: 411px) {
+  .nav-name {
+    display: block; } }
+@media (max-width: 768px) {
+  .click-2 {
+    top: 5px; } }
 
 /*# sourceMappingURL=styles.css.map */
