--- a/CSS/Components/_footer.scss
+++ b/CSS/Components/_footer.scss
@@ -1,4 +1,10 @@
-.footer{
+footer{
+margin-top: 2%;
 background-color: #c2e4d3;
-padding: 10px;
-}
+.footer-img{
+margin-bottom: 4%;
+margin-left: 20%;
+margin-top: 1%;
+  }
+ }
+
