--- a/CSS/Utilities/_media.scss
+++ b/CSS/Utilities/_media.scss
@@ -13,7 +13,11 @@
 @media (max-width: 768px) {
 .click-2{
 top: 5px;
-} 
-
+ } 
 }
 
+@media (min-width: 1024px){
+.footer-links{
+margin-left: 25%;	
+ }	
+}
