--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -448,9 +448,13 @@ h2 {
   padding: 0;
   padding-top: 10px; }
 
-.footer {
-  background-color: #c2e4d3;
-  padding: 10px; }
+footer {
+  margin-top: 2%;
+  background-color: #c2e4d3; }
+  footer .footer-img {
+    margin-bottom: 4%;
+    margin-left: 20%;
+    margin-top: 1%; }
 
 @keyframes fade {
   0% {
@@ -485,5 +489,8 @@ h2 {
 @media (max-width: 768px) {
   .click-2 {
     top: 5px; } }
+@media (min-width: 1024px) {
+  .footer-links {
+    margin-left: 25%; } }
 
 /*# sourceMappingURL=styles.css.map */
