--- a/CSS/Utilities/_media.scss
+++ b/CSS/Utilities/_media.scss
@@ -16,4 +16,12 @@ top: 5px;
  } 
 }
 
+@media (min-width: 1024px){
+.footer-links{
+margin-left: 20%;
+}
+.footer-links img{
+margin-left: 18%;
+ }
+}
 
