--- a/CSS/Components/_about-me.scss
+++ b/CSS/Components/_about-me.scss
@@ -2,7 +2,7 @@
 padding: 3% 3%;
 border-left: 2px solid #89cff0;
 border-right: 2px solid #89cff0;
-background-image: linear-gradient(white, #dbd9d9, white);
+background-image: linear-gradient(#ffffff, #dbd9d9, #ffffff);
 }
 
 .about-me p{
