--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -356,7 +356,7 @@ a:active {
   padding: 3% 3%;
   border-left: 2px solid #89cff0;
   border-right: 2px solid #89cff0;
-  background-image: linear-gradient(white, #dbd9d9, white); }
+  background-image: linear-gradient(#ffffff, #dbd9d9, #ffffff); }
 
 .about-me p {
   font-size: 1.2rem;
