title wide screen

--- a/CSS/Utilities/_media.scss
+++ b/CSS/Utilities/_media.scss
@@ -23,5 +23,9 @@ margin-left: 20%;
 .footer-links img{
 margin-left: 18%;
  }
+ .jumbotron .fade, .fade-p{
+position: relative;
+bottom: 70px;
+ }
 }
 
