--- a/CSS/Components/_jumbotron.scss
+++ b/CSS/Components/_jumbotron.scss
@@ -12,6 +12,17 @@ text-shadow: 2px 2px 5px black;
 border-bottom: 4px solid #b20000;
 }	
 
+span {
+opacity: 0;
+transition: all .9s ease;	
+}
+
+.jsfade{
+opacity: 1;
+position: relative;
+bottom: 50px;	
+}
+
 .pretty{
 color: #FF1493;
 text-shadow: 1px 1px 2px black;	
@@ -26,10 +37,10 @@ color:#b20000;
 .fade{
 opacity: 0;
 transform-origin: 50%, 50%;
-animation: fade 1s ease-in-out .6s forwards;	
+animation: fade 1s ease-in-out 1.9s forwards;	
 }
 
 .fade-p{
 opacity: 0;
-animation: fade 1.2s ease-in-out 1.3s forwards;	
+animation: fade 1.2s ease-in-out 2.3s forwards;	
 }
