--- a/CSS/Components/_portfolio.scss
+++ b/CSS/Components/_portfolio.scss
@@ -58,7 +58,7 @@ h2{
 font-family: 'Roboto', sans-serif;
 padding: 5% 0;	
 padding-bottom: 100px;
-border-top: 5px solid #89cff0;
+border-top: 5px solid #aecdd2;
 width: 70%;
 }
 
