--- a/CSS/Utilities/_keyframes.scss
+++ b/CSS/Utilities/_keyframes.scss
@@ -28,3 +28,18 @@ transform: translateY(-3px);
 transform: translateY(0px);
 }	
  }
+
+@keyframes footerSVG{
+0%{
+} 20%{
+left: 5px;
+} 40%{
+left: 10px;
+}60%{
+left: 15px;
+} 80%{
+left: 20px;
+} 100%{
+left: 25px;
+ }
+}
