--- a/CSS/Utilities/_media.scss
+++ b/CSS/Utilities/_media.scss
@@ -7,12 +7,12 @@
 @media (min-width: 411px) {
   .nav-name {
     display: block; 
- }
 }
+ }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
 .click-2{
-top: 5px;
+top: 4px;
  } 
 }
 
