--- a/CSS/Components/_portfolio.scss
+++ b/CSS/Components/_portfolio.scss
@@ -15,7 +15,7 @@ text-shadow: 1px 1px 3px #1c64ff,
   text-shadow: 1px 1px 1px white,
   2px 2px 5px white,
   4px 4px 7px white;
-  border-bottom: 2px solid #89cff0;
+  border-bottom: 2px solid white;
 }
 
 .helloworld{
