--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -411,7 +411,7 @@ a:active {
 .introspan {
   color: #1c64ff;
   text-shadow: 1px 1px 1px white, 2px 2px 5px white, 4px 4px 7px white;
-  border-bottom: 2px solid #89cff0; }
+  border-bottom: 2px solid white; }
 
 .helloworld {
   font-size: 2.5rem;
