--- a/CSS/Components/_jumbotron.scss
+++ b/CSS/Components/_jumbotron.scss
@@ -2,7 +2,7 @@
 padding-top: 13%;
 padding-left: 2%;
 height: 100vh;
-background-image: url('../cover.jpg');
+background-image: url('../images/cover.jpg');
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
