--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -313,7 +313,7 @@ template {
   padding-top: 13%;
   padding-left: 2%;
   height: 100vh;
-  background-image: url("../cover.jpg");
+  background-image: url("../images/cover.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
