--- a/CSS/Components/_footer.scss
+++ b/CSS/Components/_footer.scss
@@ -1,8 +1,8 @@
 footer{
-margin-top: 2.3%;
-background-color: #c2e4d3;
+margin-top: 2.5%;
+border-top: 3px solid #b20000;
  }
-
+ 
 footer svg{
 height: 50px;
 width: 50px;
