--- a/CSS/Components/_jumbotron.scss
+++ b/CSS/Components/_jumbotron.scss
@@ -12,6 +12,12 @@ text-shadow: 2px 2px 5px black;
 border-bottom: 4px solid #b20000;
 }	
 
+h1{
+font-family: Lobster, sans-serif;
+font-size: 2.5em;
+text-shadow: 3px 3px 10px #b20000;	
+}
+
 .headerspan {
 opacity: 0;
 transition: all .9s ease;	
