--- a/CSS/Components/_about-me.scss
+++ b/CSS/Components/_about-me.scss
@@ -2,7 +2,7 @@
 padding: 3% 3%;
 border-left: 2px solid #89cff0;
 border-right: 2px solid #89cff0;
-background-image: linear-gradient(#ffffff, #dbd9d9, #ffffff);
+background-image: linear-gradient(to bottom, #fff 0%, #fdcbf1 50%, #fff 100%);
 }
 
 .about-me p{
@@ -11,8 +11,9 @@ background-image: linear-gradient(#ffffff, #dbd9d9, #ffffff);
 }
 
 .about-me h4{
-font-family: 'Roboto', sans-serif;
+font-family: 'Lobster', sans-serif;
 font-size: 1.9em;
+text-shadow: 2px 2px 5px #89cff0;
 border-bottom: solid 2px #89cff0;
 width: 50%;
 margin: auto;
