--- a/CSS/Components/_portfolio.scss
+++ b/CSS/Components/_portfolio.scss
@@ -15,12 +15,13 @@ text-shadow: 1px 1px 3px #1c64ff,
   text-shadow: 1px 1px 1px white,
   2px 2px 5px white,
   4px 4px 7px white;
-  border-bottom: 2px solid white;
+  border-bottom: .5px solid white;
 }
 
 .helloworld{
 font-size: 2.5rem;
 color: black;
+font-family: roboto;
 text-shadow: 5px 5px 15px #89cff0;
 }
 
@@ -55,17 +56,25 @@ border-radius: 10px;
 
 .card:hover{
 transform: scale(1.1);
-transition: all .3s ease-in-out;
-transition-duration: .5s;
+transition: all .4s ease-in-out;
 margin: 5% 2%;
 box-shadow: -3px -3px 10px black;
 }
 
+.card h5{
+font-family: 'lobster', sans-serif;
+text-align: center;
+color: red;
+font-size: 1.5em;
+text-shadow: 2px 2px 8px #89cff0;
+}
+
 h2{
-font-family: 'Roboto', sans-serif;
+font-family: 'lobster', sans-serif;
+font-size: 2.8em;
 padding: 5% 0;	
-padding-bottom: 100px;
-border-top: 5px solid #aecdd2;
+padding-bottom: 1em;
+border-top: 5px solid #b20000;
 width: 70%;
 }
 
