--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -324,8 +324,7 @@ template {
 
 h1 {
   font-family: Lobster, sans-serif;
-  font-size: 2.5em;
-  text-shadow: 3px 3px 10px #b20000; }
+  text-shadow: 1px 1px 2px purple, 2px 2px 4px purple, 3px 3px 6px purple, 4px 4px 8px purple, 5px 5px 10px purple; }
 
 .headerspan {
   opacity: 0;
@@ -343,7 +342,7 @@ h1 {
 .jumbotron hr {
   width: 51%;
   height: 3px;
-  color: #b20000; }
+  color: #89cff0; }
 
 .fade {
   opacity: 0;
