--- a/CSS/Components/_about-me.scss
+++ b/CSS/Components/_about-me.scss
@@ -2,7 +2,7 @@
 padding: 3% 3%;
 border-left: 2px solid #89cff0;
 border-right: 2px solid #89cff0;
-background-image: linear-gradient(to bottom, #fff 0%, #fdcbf1 50%, #fff 100%);
+background-image: linear-gradient(to bottom, #fff 0%, #FEF6C6 50%, #fff 100%);
 }
 
 .about-me p{
