html & css updates

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -373,7 +373,7 @@ a:active {
 
 .about-me p {
   font-size: 1.2rem;
-  font-weight: 10; }
+}
 
 .about-me h4 {
   font-family: 'Lobster', sans-serif;
